--- a/demo/style.css
+++ b/demo/style.css
@@ -54,3 +54,25 @@ input {
   line-height: 1.4em;
   padding: 0.5em;
 }
+
+.required {
+  background: transparent url('required.gif') top right / 7px no-repeat;
+  padding: 0 1em 0 0;
+}
+
+.label {
+  margin: 0 0.5em;
+  vertical-align: bottom;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 0.9em;
+  font-weight: bold;
+  line-height: 130%;
+  padding: 0.06em 0.3em;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.label-warning, .chip-warning {
+    background-color: #ffa939;
+}
